--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style>
         /* Change the body background, background size, position, font family and color */
         body {
-            background: url("Images/banner.jpg");
+            background: url("banner.jpg");
             background-size: cover;
             background-position: center;
             font-family: Lato;
