--- a/imageGallery.html
+++ b/imageGallery.html
@@ -94,31 +94,31 @@
 
         <div class="row grid-item">
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n1.jpg"></div>
+                <div class="thumbnail"><img src="n1.jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n2.jpg"></div>
+                <div class="thumbnail"><img src="n2.jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n3.jpg"></div>
+                <div class="thumbnail"><img src="n3.jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n4.jpg"></div>
+                <div class="thumbnail"><img src="n4.jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n5.jpg"></div>
+                <div class="thumbnail"><img src="n5.jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n6.jpg"></div>
+                <div class="thumbnail"><img src="n6.jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n7.jpg"></div>
+                <div class="thumbnail"><img src="n7.jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n8.jpg"></div>
+                <div class="thumbnail"><img src=".jpg"></div>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <div class="thumbnail"><img src="Images/n9.jpg"></div>
+                <div class="thumbnail"><img src=".jpg"></div>
             </div>
 
 
