--- a/project1.html
+++ b/project1.html
@@ -126,7 +126,7 @@
     <div id="background">
 
         <div id="number1">
-            <img id="pic" src="Images/zulkifl.jpg">
+            <img id="pic" src="zulkifl.jpg">
             <h1>Zulkifl Mohammed</h1>
             <p>417 St Anthony Ave, St Paul, MN, 55103</p>
             <p>Phone: (612)-868-1986</p>
